--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,12 @@ li {
   width: 86%; 
   margin: 0 auto;
 }
+.container{
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  float: left;
+}
 /*=================================
   Header styling starts here
 =================================*/
@@ -150,8 +156,6 @@ header .whitebold{
 /*=================================
   main styling starts here
 =================================*/
-
-
 
 
 
