--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,9 @@ header .whitebold{
   margin-right: 10px;
   color: white;
 }
+*{
+  box-sizing: border-box;
+}
 
 
 
@@ -186,7 +189,7 @@ header .whitebold{
   width: auto;
   margin-top: 38px;
   color: white;
-  opacity: 0.7;
+  opacity: 0.6;
 
 }
 .banner1-para span{
@@ -202,11 +205,149 @@ header .whitebold{
   padding:23px 35px;
   background-color: transparent;
   color: white;
-  border-color: 1px solid white 0.7;
+  border-color: 1px solid white 0.6;
   font-weight: bold;
 }
+.banner2{
+  height: 865px;
+  width: 100%;
+  float: left;
+  background-color: #163f4d;
+}
+.banner2-upper{
+  text-align: center;
+  color: white;
+  height: 293px;
+  width: 100%;
+  float: left;
+}
+.banner2-upper h3{
+  font-size: 250%;
+  font-weight: bold;
+  margin-top: 117px;
+}
+.banner2-upper span{
+  display: block;
+  margin-top: 49px;
+  font-size: 135%;
+  opacity: 0.6;
+}
+.banner2-lower{
+  height: 572px;
+  width: 100%;
+  float: left;
+  display: flex;
+  justify-content: space-around;
+  gap: 55px;
 
+}
+.banner2-lowerbox{
+  height: 472px;
+  width: 663px;
+  background-color: #607a82;
+  text-align: center;
 
+}
+.banner2-lowerbox img{
+  height: 373px;
+  width: 100%;
+}
+.banner2-lowerbox span{
+  display: block;
+  text-align: center;
+  color: white;
+  margin-top: 42px;
+  opacity: 0.6;
+  font-size: 135%;
+}
+.banner3{
+  height: 794px;
+  width: 100%;
+  float: left;
+  background-color: #213840;
+}
+.banner3-upper{
+  height: 288px;
+  width: 100;
+  padding-left: 78px;
+  float: left;
+}
+.banner3-upper h3{
+  font-size: 250%;
+  font-weight: bold;
+  margin-top: 117px;
+  color: white;
+}
+.banner3-upper span{
+  display: block;
+  margin-top: 50px;
+  color: white;
+  opacity: 0.6;
+  font-size: 135%;
+}
+.banner3-lower{
+  height: 506px;
+  width: 100%;
+  float: left;
+}
+.banner3-leftbox{
+  height: 100%;
+  width: 371px;
+  float: left;
+}
+.banner3-rightbox{
+  height: 100%;
+  width: 1148px;
+  float: left;
+}
+.banner3-photos{
+  height: 50%;
+  width: 31%;
+  float: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.banner3-photos img{
+  height: 90%;
+  width: 90%;
+}
+.banner3-leftbox ul li{
+    height: 45px;
+    width: 266px;
+    background-color: pink;
+    margin: 10px 83px;
+    border-radius: 12px;
+    padding: 16px 18px;
+}
+.banner4{
+  height: 766px;
+  width: 100%;
+  float: left;
+  background-image: linear-gradient(to top,#314d57,#072c38);
+}
+.banner4-upper{
+  height: 292px;
+  width: 100%;
+  text-align: center;
+  float: left;
+}
+.banner4-upper h3{
+  font-size: 250%;
+  font-weight: bold;
+  margin-top: 117px;
+  color: white;
+}
+.banner4-upper span{
+  display: block;
+  margin-top: 50px;
+  color: white;
+  opacity: 0.6;
+  font-size: 135%;
+}
+.banner4-lower{
+  
+}
 /*=================================
   main styling ends here
 =================================*/
