--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,7 +346,16 @@ header .whitebold{
   font-size: 135%;
 }
 .banner4-lower{
-  
+  height: 474px;
+  width: 100%;
+  float: left;
+  display: flex;
+  justify-content: space-around;
+}
+.banner4-photos{
+  height: 374px;
+  width: 427px;
+  border: 1px solid white;
 }
 /*=================================
   main styling ends here
